[tool.poetry]
name = "scraipe-reddit"
version = "0.1.5"
description = "Scraipe Streamlit app for Reddit."
readme = "README.md"
license = "MIT"
authors = ["Nibs"]
homepage = "https://github.com/snpm/scraipe-reddit"
packages = []


[tool.poetry.dependencies]
python = ">=3.10,<4.0"  # Correct placement of Python version requirement
scraipe = {version = "^0.1.54", extras = ["extended"]}
streamlit = "*"
streamlit-scroll-navigation="*"
pandas = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
asdftimer = "*"
pytest-asyncio = "*"
pytest-cov = "*"
pytest-mock = "*"
aioresponses = "*"

#[tool.poetry.requires-plugins]
#poetry-plugin-export = ">=1.8"
